SecurityControl/force-app/main/default/objects/Security_Alert__c/fields/Camera_ID__c.field-meta.xml
<CustomField>
    <fullName>Camera_ID__c</fullName>
    <label>Camera ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>