SecurityControl/force-app/main/default/objects/Security_Alert__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <label>Confidence</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>