SecurityControl/force-app/main/default/objects/Security_Alert__c/fields/Threat_Type__c.field-meta.xml
<CustomField>
    <fullName>Threat_Type__c</fullName>
    <label>Threat Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>