SecurityControl/force-app/main/default/objects/Security_Alert__c/fields/Weapon__c.field-meta.xml
<CustomField>
    <fullName>Weapon__c</fullName>
    <label>Weapon</label>
    <length>200</length>
    <type>Text</type>
</CustomField>